# alf-vis

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cv2.py  docker-compose.yml  go.py  pyproject.toml  requirements.txt  trajectory.csv  ultralytics.py
.github/workflows/: ci.yml
data/processed/: trajectory_src.csv
docs/: README.md
docs/opencv/: Instrukcja 8.odt  instrukcja 1.md  kod_1.odt  opencv_1.odt  opencv_1.xml  opencv_2.odt  opencv_3.odt  opencv_4.odt  opencv_5.odt  opencv_6.odt  opencv_7.odt  opencv_8.odt  opencv_instrukcja.md
experimental/: README.md
experimental/bytetrack3/: main.py  tracker.py
experimental/bytetrack4/: README.md  main.py  slam_stub.py  slam_view.py  visualize_map.py
experimental/cv2/: README.md  world_map_test.ply
experimental/demo_3d_world_map/: README.md  TODO.md  depth_projection.py  main.py  realsense.py  slam_view.py  world_map.py
experimental/demo_apriltag_fusion/: README.md  TODO.md  main.py  viz3d.py
experimental/demo_basic_tracking/: README.md  TODO.md  main.py
experimental/demo_realsense_pipeline/: README.md  TODO.md  main.py  tracker.py  tracking_kalman_hungarian.csv  world_map.py
experimental/demo_yolo_utils/: README.md  TODO.md
experimental/fast_camera/: README.md  TODO.md  __init__.py  main.py
experimental/image_acquisition/: ToDo.txt  kalman3d.py  main.py  realsense.py
experimental/yolo/: camera_yolo.py
issues/: 2026-03-25-cv2-import-errors.md
scripts/: go.py
src/bytetrack4/: requirements.txt
src/cv2/: README.md  depth_projection.py  main.py  realsense.py  test_no_realsense.py  test_tracker.py  tracker.py  tracking_export.py  world_map.py
src/fsm/: PointLocationReceiver.py  perception_fsm.py  point_location_sender.py  position_publisher.py
src/image_acquisition/: readme.md  requirements.txt  tracker.py  world_map.py
src/image_analysis/: __init__.py  acquisition_metrics.py  active_vision.py  array_backend.py  calibration.py  camera.py  classification.py  detection.py  kalman_tracking.py  map_visualizer.py  markers.py  miniCamera.py  miniCamera2.py  miniCamera3.py  object_classes.py  plane_detection.py  point_cloud.py  pose_estimation.py  preprocessing.py  pywebio_app.py  slam.py  targeting.py  utils.py  viewer.py  yolo_detector.py
src/image_aq/: go.py  visualize.py
src/llava/: instructions  links
src/robot_perception/: Dockerfile  README.md  bootstrap_conda.py  environment.yml  main.py  main_fsm.py  main_perception.py  (+6 more)
tests/: conftest.py  cv2.py  test_acquisition_metrics.py  test_active_vision.py  test_array_backend.py  test_calibration.py  test_camera.py  test_camera_yolo_module.py  test_classification.py  test_detection.py  test_kalman_tracking.py  test_map_visualizer.py  test_markers.py  test_object_classes.py  test_plane_detection.py  test_point_cloud.py  test_pose_estimation.py  test_pywebio_app.py  test_robot_perception_versioning.py  test_slam.py  test_targeting.py  test_viewer.py  test_yolo_detector.py
(+59 files in other folders)
