[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-analysis"
version = "0.1.0"
description = "Template for Python image analysis projects"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "Pillow>=10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
# Visual marker detection (ArUco is bundled with opencv-contrib-python-headless)
markers = [
    "pupil-apriltags>=1.0",   # AprilTag detection
    # cctag – build from source: https://github.com/alicevision/CCTag
    "pyzbar>=0.1.10",          # QR code detection fallback
]
# YOLO-based object detection
yolo = [
    "ultralytics>=8.0",
]
# 3-D processing: point clouds, plane detection, SLAM
"3d" = [
    "open3d>=0.17",
]
# Full installation (all optional features)
all = [
    "pupil-apriltags>=1.0",
    "pyzbar>=0.1.10",
    "ultralytics>=8.0",
    "open3d>=0.17",
]
# Experimental demos – all dependencies needed to run programs in experimental/
experimental = [
    "ultralytics>=8.0",
    "pupil-apriltags>=1.0",
    "pyrealsense2>=2.50",
    "open3d>=0.17",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# ruff – linting and formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hints)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]  # relax annotation requirements in tests

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# mypy – static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest – testing
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/image_analysis"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
